[Swagger] POST /groups/{group-id}/kick-members
